# snek

./: Cargo.toml  README.md
src/: canvas.rs  direction.rs  main.rs  score.rs  snake.rs
static/: index.html  style.css
