[package]
name = "snek"
version = "0.1.0"
authors = ["Mayank Shah <mayankshah1614@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.13"
wasm-bindgen = "0.2.60"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]